vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: websocket
    protocol: TCP
    port: 3012
    targetPort: 3012
  type: ClusterIP
