vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: password.init0xff.com
    http:
      paths:
      - path: /notifications/hub
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 3012
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
